Kubernetes/directus.yaml
apiVersion: v1
kind: Service
metadata:
  name: directus
spec:
  selector:
      app: directus
  ports:
    - protocol: TCP
      port: 8055

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: directus
spec:
  selector:
    matchLabels:
      app: directus
  replicas: 1
  template:
    metadata:
      labels:
        app: directus
        ID: "directus_service_id"
    spec:
      containers:
      - name: directus
        image: directus/directus:10.4.0
        imagePullPolicy: Always
        command: []
        resources:
          limits:
            memory: 2048Mi
            cpu: "1"
        stdin: true
        tty: true
        ports:
        - containerPort: 8055
        volumeMounts:
        - mountPath: /directus/uploads
          name: directus-uploads
        - mountPath: /directus/extensions
          name: directus-extensions
      imagePullSecrets:
      - name: github
      volumes:
          - name: directus-uploads
            persistentVolumeClaim:
              claimName: directus-uploads
          - name: directus-extensions
            persistentVolumeClaim:
              claimName: directus-extensions

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: directus
  annotations: 
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/proxy-connect-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'  
spec:
  rules:
    - host: directus_public_url
      http:
        paths:
          - backend:
              service:
                name: directus
                port:
                  number: 8055
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - directus_public_url
